# RagE

./: LICENSE  README.md  project.toml  pyproject.toml  setup.py
examples/custom_model_base/: long_phobert_base.py
examples/training_biencoder/: config.json  train.py
examples/training_biencoder/training_sts/: config.json  train.py
examples/training_biencoder/training_vi_msmacro/: config.json
examples/training_biencoder/training_vi_nli/: train.py
examples/training_biencoder/training_zalo/: config.json
examples/training_biencoder/unsupervised_training_vi_mc4/: config.json  train.py
examples/training_crossencoder/: config.json  train.py
examples/training_embedding/training_sts/: config.json  train.py
examples/training_embedding/training_vi_msmacro/: train.py
examples/training_embedding/training_vi_nli/: config.json  train.py
examples/training_embedding/unsupervised_training_vi_mc4/: config.json  train.py
examples/training_llm/: config.json  train.py
examples/training_reranker/: config.json  train.py
notebook/: Reranker_and_sentenceBert.ipynb  dataloader.ipynb  generate_text.ipynb  ranker_and_sentence_embedding.ipynb  tutorial_ranker.ipynb  tutorial_sentense_embedding.ipynb
src/: constant.py
src/rag_chatbot/: __init__.py  constant.py
src/rag_chatbot/dataloader/: __init__.py  genanswer.py  sentenceab.py
src/rag_chatbot/losses/: ContrastiveLoss.py  CosineSimilarityLoss.py  InBatchNegatives.py  __init__.py
src/rag_chatbot/models/: __init__.py  model_infer.py  model_rag.py
src/rage/: __init__.py  constant.py
src/utils/: utils.py
(+74 files in other folders)
