[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rage"
version = "0.1.0.dev"
dependencies=[
"transformers>= 4.31.0", 
"torch>= 2.0.0", 
"numpy>= 1.26.4",
"bitsandbytes>= 0.39.1", 
"loralib>= 0.1.2", 
"datasets>= 2.17.1",
"peft>= 0.4.0", 
"pandas>= 2.0.3",
"scipy>= 1.11.1", 
"scikit-learn>= 1.3.0", 
"huggingface-hub>= 0.19.4", 
"prettytable>= 3.10.0", 
"wandb>= 0.16.6", 
"onnx>= 1.17.0", 
"onnxruntime>= 1.19.2"
]

description = "RagE (Rag Engine) - A tool supporting the construction and training of components of the Retrieval-Augmented-Generation (RAG) model. It also facilitates the rapid development of Q&A systems and chatbots following the RAG model."
readme = "README.md"
authors = [{ name = "Nguyễn Tiến Đạt", email = "nduc0231@gmail.com" }]
maintainers = [{ name = "Nguyễn Tiến Đạt", email = "nduc0231@gmail.com" }]
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["nlp", "ranker", "embedding", "vietnamese-nlp", "rag", "qa-system", "retrieval-augmented-generation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://huggingface.co/anti-ai"  
repository = "https://github.com/anti-aii/RagE"  


[tool.setuptools.packages.find]
where = ["src"]
include = ["rage*"]

[tool.setuptools.package-data]
"*" = ["**/*.yml"]
